[package]
name = "dev-null-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
dotenv = "0.15.0"
hyper = { version = "0.14.26", features = ["full"] }
lettre = { version = "0.10.4", features = [
  "smtp-transport",
  "pool",
  "hostname",
  "builder",
  "rustls-tls",
], default-features = false }
notify = "6.0.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
