[package]
name = "dev-null-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
dotenv = "0.15.0"
hyper = { version = "0.14.24", features = ["full"] }
lettre = { version = "0.10.2", features = [
  "smtp-transport",
  "pool",
  "hostname",
  "builder",
  "rustls-tls",
], default-features = false }
notify = "5.1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
byteorder = "1.4.3"
bytes = "1.3.0"
lazy_static = "1.4.0"
leb128 = "0.2.5"
